--- a/studentBio.html
+++ b/studentBio.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Student Bio</h1>
         <h2>Nick Ramsay</h2>
-        <img src="https://media.licdn.com/dms/image/C5103AQHor9TDqydyqA/profile-displayphoto-shrink_200_200/0?e=1569456000&v=beta&t=VcVz_ypEyKp9vkCtqvp7i15OVp_PjapWE3-EX1qcW0M" alt="Nick's LinkedIn Image">
+        <img height=200px width=200px src="https://media.licdn.com/dms/image/C5103AQHor9TDqydyqA/profile-displayphoto-shrink_200_200/0?e=1569456000&v=beta&t=VcVz_ypEyKp9vkCtqvp7i15OVp_PjapWE3-EX1qcW0M" alt="Nick's LinkedIn Image">
         <p>I'm Nick Ramsay, a student at University of Sydney's Full Stack bootcamp.</p>
         <p>I'm originally from the US but live in Australia at the moment.</p>
         <h2>Contact Info</h2>
