Added CSS style

--- a/studentBio.html
+++ b/studentBio.html
@@ -3,18 +3,42 @@
     <head>
         <title>Nick's Student Bio</title>
         <link rel="icon" href="https://media.licdn.com/dms/image/C5103AQHor9TDqydyqA/profile-displayphoto-shrink_200_200/0?e=1569456000&v=beta&t=VcVz_ypEyKp9vkCtqvp7i15OVp_PjapWE3-EX1qcW0M">
+        <style>
+            body {
+                margin-top: 0px;
+                margin-left: 0px;
+                margin-right: 0px;
+            }
+            
+            h1 {
+                text-align: center;
+                color: white;
+                background-color: black;
+            }
+
+            .floatLeft {
+                float: left;
+                padding-right: 50px;
+            }
+        </style>
     </head>
     <body>
         <h1>Student Bio</h1>
-        <h2>Nick Ramsay</h2>
-        <img height=200px width=200px src="https://media.licdn.com/dms/image/C5103AQHor9TDqydyqA/profile-displayphoto-shrink_200_200/0?e=1569456000&v=beta&t=VcVz_ypEyKp9vkCtqvp7i15OVp_PjapWE3-EX1qcW0M" alt="Nick's LinkedIn Image">
-        <p>I'm Nick Ramsay, a student at University of Sydney's Full Stack bootcamp.</p>
-        <p>I'm originally from the US but live in Australia at the moment.</p>
+        <div class = "floatLeft">
+            <h2>Nick Ramsay</h2>
+            <img height=200px width=200px src="https://media.licdn.com/dms/image/C5103AQHor9TDqydyqA/profile-displayphoto-shrink_200_200/0?e=1569456000&v=beta&t=VcVz_ypEyKp9vkCtqvp7i15OVp_PjapWE3-EX1qcW0M" alt="Nick's LinkedIn Image">
+        </div>
+        <div class = "floatLeft">
+            <p>I'm Nick Ramsay, a student at University of Sydney's Full Stack bootcamp.</p>
+            <p>I'm originally from the US but live in Australia at the moment.</p>
+        </div>
+        <div class = "floatLeft">
         <h2>Contact Info</h2>
-        <ul>
-            <li><strong>Email: </strong><a href="mailto:nickramsay1989@gmail.com" target="_blank">nickramsay1989@gmail.com</a></li>
-            <li><strong>GitHub: </strong><a href="https://github.com/Nick-Ramsay" target="_blank">Nick's GitHub Account</a></li>
-            <li><strong>Portfolio: </strong><a href="">Coming Soon...</a></li>
-        </ul>
+            <ul>
+                <li><strong>Email: </strong><a href="mailto:nickramsay1989@gmail.com" target="_blank">nickramsay1989@gmail.com</a></li>
+                <li><strong>GitHub: </strong><a href="https://github.com/Nick-Ramsay" target="_blank">Nick's GitHub Account</a></li>
+                <li><strong>Portfolio: </strong><a href="">Coming Soon...</a></li>
+            </ul>
+        </div>
     </body>
 </html>
