Aligned bio paragraph and changed font family

--- a/studentBio.html
+++ b/studentBio.html
@@ -8,6 +8,7 @@
                 margin-top: 0px;
                 margin-left: 0px;
                 margin-right: 0px;
+                font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
             }
             
             h1 {
@@ -20,6 +21,12 @@
                 float: left;
                 padding-right: 50px;
             }
+
+            .floatLeftParagraph {
+                float: left;
+                padding-right: 50px;
+                padding-top: 57.36px;
+            }
         </style>
     </head>
     <body>
@@ -28,7 +35,7 @@
             <h2>Nick Ramsay</h2>
             <img height=200px width=200px src="https://media.licdn.com/dms/image/C5103AQHor9TDqydyqA/profile-displayphoto-shrink_200_200/0?e=1569456000&v=beta&t=VcVz_ypEyKp9vkCtqvp7i15OVp_PjapWE3-EX1qcW0M" alt="Nick's LinkedIn Image">
         </div>
-        <div class = "floatLeft">
+        <div class = "floatLeftParagraph">
             <p>I'm Nick Ramsay, a student at University of Sydney's Full Stack bootcamp.</p>
             <p>I'm originally from the US but live in Australia at the moment.</p>
         </div>
