Changed shortcut icon and my picture to GitHub source

--- a/studentBio.html
+++ b/studentBio.html
@@ -2,7 +2,13 @@
 <html lang="en-us">
     <head>
         <title>Nick's Student Bio</title>
-        <link rel="icon" href="https://media.licdn.com/dms/image/C5103AQHor9TDqydyqA/profile-displayphoto-shrink_200_200/0?e=1569456000&v=beta&t=VcVz_ypEyKp9vkCtqvp7i15OVp_PjapWE3-EX1qcW0M">
+        <link rel="icon" href="https://avatars0.githubusercontent.com/u/48420063?s=460&v=4">
+        <style>
+            body {
+                margin-top: 0px;
+                margin-left: 0px;
+                margin-right: 0px;
+                font-family: CecW0M">
         <style>
             body {
                 margin-top: 0px;
@@ -33,7 +39,7 @@
         <h1>Student Bio</h1>
         <div class = "floatLeft">
             <h2>Nick Ramsay</h2>
-            <img height=200px width=200px src="https://media.licdn.com/dms/image/C5103AQHor9TDqydyqA/profile-displayphoto-shrink_200_200/0?e=1569456000&v=beta&t=VcVz_ypEyKp9vkCtqvp7i15OVp_PjapWE3-EX1qcW0M" alt="Nick's LinkedIn Image">
+            <img height=200px width=200px src="https://avatars0.githubusercontent.com/u/48420063?s=460&v=4" alt="Nick's LinkedIn Image">
         </div>
         <div class = "floatLeftParagraph">
             <p>I'm Nick Ramsay, a student at University of Sydney's Full Stack bootcamp.</p>
